Move module code inline with module name

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Advanced Programming</h1>
-    <h2>IS4308</h2>
+    <h1>IS4308 Advanced Programming</h1>
     <p>This module is about using JavaFX</p>
 </body>
 </html>
